production/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-argocd-service
  labels:
    run: demo-argocd
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: demo-argocd
